# nitchplusplus

./: CMakeLists.txt  LICENSE  README.md
.assets/: ascii.txt
assets/: ascii.txt
cmake/: copy_if_missing.cmake
config/: EXAMPLE-config.toml  EXAMPLE_config.toml  example_config.toml
install/: PKGBUILD  fetchplusplus-git-0.1.0-1-x86_64.pkg.tar.zst  fetchpp
install/pkg/fetchplusplus-git/: .BUILDINFO  .MTREE  .PKGINFO
src/: cli-processor.cpp  cli-processor.h  cli_processor.cpp  cli_processor.h  colors.hpp  configuration.cpp  configuration.h  icons.cpp  icons.h  logos.cpp  logos.h  main.cpp  nitch++  printer.cpp  printer.h  system-info.cpp  system-info.h  system_info.cpp  system_info.h
src/nitch++.dSYM/Contents/: Info.plist
src/nitch++.dSYM/Contents/Resources/DWARF/: nitch++
src/nitch++.dSYM/Contents/Resources/Relocations/aarch64/: nitch++.yml
